--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <div class="lol">Hello world</div>
     <div class="first__titile">I am King</div>
     <h3>I am world</h3>
+
+
+
+    <script src="./script/script.js"></script>
 </body>
 </html>
